Fixed footer not centering on mobile

--- a/teacozy/css/style.css
+++ b/teacozy/css/style.css
@@ -147,6 +147,10 @@ nav li {
 
 /* Footer
 -------------------------*/
+.footer {
+  margin: 0 auto;
+}
+
 .contact {
   height: 200px;
 }
